# goodmoneying

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  CONTEXT.md  README.md  dev.sh  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile
apps/web/: Dockerfile  index.html  package.json  tsconfig.json
apps/worker/: Dockerfile
config/: operations-api.yaml
deploy/scripts/: deploy-profile.sh  healthcheck-profile.sh  start-profile.sh  stop-profile.sh
docs/: 01_Product.md  02_Architecture.md  사용설명서-M1-업비트-수집-운영-mvp.md
docs/.analysis/: 2026-06-17-업비트-수집-db-erd.md
docs/02_Architecture/: upbit-collection-pipeline.md
docs/ADR/: ADR-0001-M1-기술-스택과-실행-방식.md  ADR-0002-M1-PostgreSQL-단일-저장소.md  ADR-0003-M1-단일-워커와-M3-5-다중화-게이트.md  ADR-0004-prod-home-CICD와-배포-프로필.md  ADR-0006-M1-백필-배치-저장과-heartbeat-갱신.md
docs/History/: 2026-06-17-M1-업비트-아키텍처-계약-설계.md  2026-06-18-M1-업비트-수집-운영-mvp-구현.md  2026-06-18-M2-데이터-수집관리-화면-재설계.md  2026-06-18-PostgreSQL-스키마-불일치-API-오류-수정.md  2026-06-18-개발환경-제어-스크립트.md  2026-06-19-M1-prod-home-CICD-배포-기반.md  2026-06-19-M3-운영화면-디자인-동기화.md  2026-06-21-백필-배치-저장과-결측-구간-요청-정비.md  2026-06-21-백필-진행률-갱신과-재개-큐-전환.md
docs/Task/: M1-T01-2026-06-17-업비트-수집-운영-mvp-아키텍처-계약-설계.md  M1-T02-2026-06-18-001-업비트-수집-운영-mvp-구현.md  M1-T03-2026-06-18-001-실제-업비트-월간-백필과-다크테마-검증.md  M1-T04-2026-06-19-001-운영계-prod-home-CICD-배포-설계.md  M1-T04-2026-06-19-002-운영계-prod-home-CICD-구현-계획.md  (+6 more)
scripts/: live_backfill_january_2026.py  run-api.sh  run-web.sh
(+70 files in other folders)
